sample/TypeError/t06.py
x = "hello"
a = 1 + float(x, 1)